[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitforge"
version = "0.0.1"
description = "Python SDK for the GitForge REST API"
requires-python = ">=3.10"
dependencies = ["httpx>=0.23.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "respx>=0.20"]

[tool.hatch.build.targets.wheel]
packages = ["src/gitforge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
