[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitforge"
version = "0.1.0"
description = "Python SDK for the GitForge REST API"
requires-python = ">=3.10"
license = "MIT"
keywords = ["gitforge", "git", "api", "sdk"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = ["httpx>=0.23.0"]

[project.urls]
Repository = "https://github.com/Nu11ified/gitforge-py-sdk"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "respx>=0.20"]

[tool.hatch.build.targets.wheel]
packages = ["src/gitforge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
